--- a/webapp_online/requirements.txt
+++ b/webapp_online/requirements.txt
@@ -1,7 +1,9 @@
 streamlit
 requests
 pandas
-distutils
-multiprocessing
+# distutils
+# multiprocessing
 matplotlib
 Pillow
+streamlit_lottie
+streamlit_option_menu
